NITdroid: deb package pushed to version NIT.05

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nitdroid-kernel-2.6.28-05 (final1) unstable; urgency=low
+
+  * 2.6.28.NIT.05 Release.
+
+ -- Jay Cartman <jay.cartman@gmail.com>  Wed, 21 Jul 2010 10:40:12 +0100
+
 nitdroid-kernel-2.6.28-04 (final1) unstable; urgency=low
 
   * 2.6.28.NIT.04 Release.
